@@ -1,3 +1,7 @@
+Change log next version
+-----------------------
+* You can now use all kinds of Collection instances (and not only List's as in the previous versions) as multi-value parameters (issue 165).
+
 Change log 1.6.1 (2012-04-05)
 -----------------------------
 * Default encoder is set to binary instead of url encoded. This means that when setting a binary body with an (by REST Assured) unrecognized content-type it will automatically be treated as an octet stream.
